--- a/requirements.txt
+++ b/requirements.txt
@@ -90,7 +90,7 @@ ImageHash==4.2.1
 imageio==2.6.1
 imagesize==1.2.0
 implicit==0.5.2
-importlib-metadata @ file:///opt/concourse/worker/volumes/live/84197498-cbc0-4436-7ce0-03c4490b7a28/volume/importlib-metadata_1593446431408/work
+importlib-metadata 
 inflect==5.3.0
 intervaltree==3.0.2
 ipykernel==5.1.4
@@ -145,7 +145,7 @@ nose==1.3.7
 notebook==6.0.3
 numba==0.48.0
 numexpr==2.7.1
-numpy @ file:///opt/concourse/worker/volumes/live/40d975a3-7e82-44c8-53df-feccdbce8b96/volume/numpy_and_numpy_base_1596233859108/work
+numpy 
 numpydoc==0.9.2
 oauthlib==3.1.0
 olefile==0.46
@@ -367,7 +367,7 @@ QDarkStyle==2.8
 QtAwesome==0.6.1
 qtconsole==4.6.0
 QtPy==1.9.0
-regex @ file:///opt/concourse/worker/volumes/live/5c3450d5-f152-477e-507e-094a7be51d80/volume/regex_1593435586246/work
+regex 
 requests==2.26.0
 requests-html==0.10.0
 requests-oauthlib==1.3.0
@@ -419,8 +419,8 @@ terminado==0.8.3
 testpath==0.4.4
 textsearch==0.0.21
 thinc==8.0.10
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-toml @ file:///tmp/build/80754af9/toml_1592853716807/work
+threadpoolctl 
+toml 
 toolz==0.10.0
 tornado==6.0.3
 tqdm==4.62.3
