--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ distributed==2.11.0
 Django==2.2
 django-prepared-query==0.3.1
 docutils==0.16
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl
+en-core-web-sm 
 entrypoints==0.3
 et-xmlfile==1.0.1
 facebook-scraper==0.2.45
