--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ click==8.0.2
 cloudpickle==1.3.0
 clyent
 colorama==0.4.3
-conda==4.8.4
+conda
 conda-build==3.18.11
 conda-package-handling==1.6.0
 conda-verify==3.4.2
