--- a/requirements.txt
+++ b/requirements.txt
@@ -39,9 +39,9 @@ cloudpickle==1.3.0
 clyent
 colorama==0.4.3
 conda
-conda-build==3.18.11
-conda-package-handling==1.6.0
-conda-verify==3.4.2
+conda-build
+conda-package-handling
+conda-verify
 confuse==1.6.0
 contextlib2==0.6.0.post1
 contractions==0.0.52
