--- a/requirements.txt
+++ b/requirements.txt
@@ -187,7 +187,7 @@ PyJWT==1.7.1
 pylint==2.4.4
 PyMsgBox==1.0.9
 pyobjc==8.4
-pyobjc-core==8.4
+pyobjc-core
 pyobjc-framework-Accessibility==8.4
 pyobjc-framework-Accounts==8.4
 pyobjc-framework-AddressBook==8.4
