--- a/requirements.txt
+++ b/requirements.txt
@@ -186,143 +186,143 @@ Pygments==2.5.2
 PyJWT==1.7.1
 pylint==2.4.4
 PyMsgBox==1.0.9
-pyobjc==8.4
-pyobjc-framework-Accessibility==8.4
-pyobjc-framework-Accounts==8.4
-pyobjc-framework-AddressBook==8.4
-pyobjc-framework-AdServices==8.4
-pyobjc-framework-AdSupport==8.4
-pyobjc-framework-AppleScriptKit==8.4
-pyobjc-framework-AppleScriptObjC==8.4
-pyobjc-framework-ApplicationServices==8.4
-pyobjc-framework-AppTrackingTransparency==8.4
-pyobjc-framework-AudioVideoBridging==8.4
-pyobjc-framework-AuthenticationServices==8.4
-pyobjc-framework-AutomaticAssessmentConfiguration==8.4
-pyobjc-framework-Automator==8.4
-pyobjc-framework-AVFoundation==8.4
-pyobjc-framework-AVKit==8.4
-pyobjc-framework-BusinessChat==8.4
-pyobjc-framework-CalendarStore==8.4
-pyobjc-framework-CallKit==8.4
-pyobjc-framework-CFNetwork==8.4
-pyobjc-framework-ClassKit==8.4
-pyobjc-framework-CloudKit==8.4
-pyobjc-framework-Cocoa==8.4
-pyobjc-framework-Collaboration==8.4
-pyobjc-framework-ColorSync==8.4
-pyobjc-framework-Contacts==8.4
-pyobjc-framework-ContactsUI==8.4
-pyobjc-framework-CoreAudio==8.4
-pyobjc-framework-CoreAudioKit==8.4
-pyobjc-framework-CoreBluetooth==8.4
-pyobjc-framework-CoreData==8.4
-pyobjc-framework-CoreHaptics==8.4
-pyobjc-framework-CoreLocation==8.4
-pyobjc-framework-CoreMedia==8.4
-pyobjc-framework-CoreMediaIO==8.4
-pyobjc-framework-CoreMIDI==8.4
-pyobjc-framework-CoreML==8.4
-pyobjc-framework-CoreMotion==8.4
-pyobjc-framework-CoreServices==8.4
-pyobjc-framework-CoreSpotlight==8.4
-pyobjc-framework-CoreText==8.4
-pyobjc-framework-CoreWLAN==8.4
-pyobjc-framework-CryptoTokenKit==8.4
-pyobjc-framework-DataDetection==8.4
-pyobjc-framework-DeviceCheck==8.4
-pyobjc-framework-DictionaryServices==8.4
-pyobjc-framework-DiscRecording==8.4
-pyobjc-framework-DiscRecordingUI==8.4
-pyobjc-framework-DiskArbitration==8.4
-pyobjc-framework-DVDPlayback==8.4
-pyobjc-framework-EventKit==8.4
-pyobjc-framework-ExceptionHandling==8.4
-pyobjc-framework-ExecutionPolicy==8.4
-pyobjc-framework-ExternalAccessory==8.4
-pyobjc-framework-FileProvider==8.4
-pyobjc-framework-FileProviderUI==8.4
-pyobjc-framework-FinderSync==8.4
-pyobjc-framework-FSEvents==8.4
-pyobjc-framework-GameCenter==8.4
-pyobjc-framework-GameController==8.4
-pyobjc-framework-GameKit==8.4
-pyobjc-framework-GameplayKit==8.4
-pyobjc-framework-ImageCaptureCore==8.4
-pyobjc-framework-IMServicePlugIn==8.4
-pyobjc-framework-InputMethodKit==8.4
-pyobjc-framework-InstallerPlugins==8.4
-pyobjc-framework-InstantMessage==8.4
-pyobjc-framework-Intents==8.4
-pyobjc-framework-IntentsUI==8.4
-pyobjc-framework-IOSurface==8.4
-pyobjc-framework-iTunesLibrary==8.4
-pyobjc-framework-KernelManagement==8.4
-pyobjc-framework-LatentSemanticMapping==8.4
-pyobjc-framework-LaunchServices==8.4
-pyobjc-framework-libdispatch==8.4
-pyobjc-framework-LinkPresentation==8.4
-pyobjc-framework-LocalAuthentication==8.4
-pyobjc-framework-LocalAuthenticationEmbeddedUI==8.4
-pyobjc-framework-MailKit==8.4
-pyobjc-framework-MapKit==8.4
-pyobjc-framework-MediaAccessibility==8.4
-pyobjc-framework-MediaLibrary==8.4
-pyobjc-framework-MediaPlayer==8.4
-pyobjc-framework-MediaToolbox==8.4
-pyobjc-framework-Metal==8.4
-pyobjc-framework-MetalKit==8.4
-pyobjc-framework-MetalPerformanceShaders==8.4
-pyobjc-framework-MetalPerformanceShadersGraph==8.4
-pyobjc-framework-MetricKit==8.4
-pyobjc-framework-MLCompute==8.4
-pyobjc-framework-ModelIO==8.4
-pyobjc-framework-MultipeerConnectivity==8.4
-pyobjc-framework-NaturalLanguage==8.4
-pyobjc-framework-NetFS==8.4
-pyobjc-framework-Network==8.4
-pyobjc-framework-NetworkExtension==8.4
-pyobjc-framework-NotificationCenter==8.4
-pyobjc-framework-OpenDirectory==8.4
-pyobjc-framework-OSAKit==8.4
-pyobjc-framework-OSLog==8.4
-pyobjc-framework-PassKit==8.4
-pyobjc-framework-PencilKit==8.4
-pyobjc-framework-Photos==8.4
-pyobjc-framework-PhotosUI==8.4
-pyobjc-framework-PreferencePanes==8.4
-pyobjc-framework-PushKit==8.4
-pyobjc-framework-Quartz==8.4
-pyobjc-framework-QuickLookThumbnailing==8.4
-pyobjc-framework-ReplayKit==8.4
-pyobjc-framework-SafariServices==8.4
-pyobjc-framework-SceneKit==8.4
-pyobjc-framework-ScreenCaptureKit==8.4
-pyobjc-framework-ScreenSaver==8.4
-pyobjc-framework-ScreenTime==8.4
-pyobjc-framework-ScriptingBridge==8.4
-pyobjc-framework-SearchKit==8.4
-pyobjc-framework-Security==8.4
-pyobjc-framework-SecurityFoundation==8.4
-pyobjc-framework-SecurityInterface==8.4
-pyobjc-framework-ServiceManagement==8.4
-pyobjc-framework-ShazamKit==8.4
-pyobjc-framework-Social==8.4
-pyobjc-framework-SoundAnalysis==8.4
-pyobjc-framework-Speech==8.4
-pyobjc-framework-SpriteKit==8.4
-pyobjc-framework-StoreKit==8.4
-pyobjc-framework-SyncServices==8.4
-pyobjc-framework-SystemConfiguration==8.4
-pyobjc-framework-SystemExtensions==8.4
-pyobjc-framework-UniformTypeIdentifiers==8.4
-pyobjc-framework-UserNotifications==8.4
-pyobjc-framework-UserNotificationsUI==8.4
-pyobjc-framework-VideoSubscriberAccount==8.4
-pyobjc-framework-VideoToolbox==8.4
-pyobjc-framework-Virtualization==8.4
-pyobjc-framework-Vision==8.4
-pyobjc-framework-WebKit==8.4
+pyobjc 
+pyobjc-framework-Accessibility
+pyobjc-framework-Accounts
+pyobjc-framework-AddressBook
+pyobjc-framework-AdServices
+pyobjc-framework-AdSupport
+pyobjc-framework-AppleScriptKit
+pyobjc-framework-AppleScriptObjC
+pyobjc-framework-ApplicationServices
+pyobjc-framework-AppTrackingTransparency
+pyobjc-framework-AudioVideoBridging 
+pyobjc-framework-AuthenticationServices 
+pyobjc-framework-AutomaticAssessmentConfiguration 
+pyobjc-framework-Automator 
+pyobjc-framework-AVFoundation 
+pyobjc-framework-AVKit 
+pyobjc-framework-BusinessChat 
+pyobjc-framework-CalendarStore 
+pyobjc-framework-CallKit 
+pyobjc-framework-CFNetwork 
+pyobjc-framework-ClassKit 
+pyobjc-framework-CloudKit 
+pyobjc-framework-Cocoa 
+pyobjc-framework-Collaboration 
+pyobjc-framework-ColorSync 
+pyobjc-framework-Contacts 
+pyobjc-framework-ContactsUI 
+pyobjc-framework-CoreAudio 
+pyobjc-framework-CoreAudioKit 
+pyobjc-framework-CoreBluetooth 
+pyobjc-framework-CoreData 
+pyobjc-framework-CoreHaptics 
+pyobjc-framework-CoreLocation 
+pyobjc-framework-CoreMedia 
+pyobjc-framework-CoreMediaIO 
+pyobjc-framework-CoreMIDI 
+pyobjc-framework-CoreML 
+pyobjc-framework-CoreMotion 
+pyobjc-framework-CoreServices 
+pyobjc-framework-CoreSpotlight 
+pyobjc-framework-CoreText 
+pyobjc-framework-CoreWLAN 
+pyobjc-framework-CryptoTokenKit 
+pyobjc-framework-DataDetection 
+pyobjc-framework-DeviceCheck 
+pyobjc-framework-DictionaryServices 
+pyobjc-framework-DiscRecording 
+pyobjc-framework-DiscRecordingUI 
+pyobjc-framework-DiskArbitration 
+pyobjc-framework-DVDPlayback 
+pyobjc-framework-EventKit 
+pyobjc-framework-ExceptionHandling 
+pyobjc-framework-ExecutionPolicy 
+pyobjc-framework-ExternalAccessory 
+pyobjc-framework-FileProvider 
+pyobjc-framework-FileProviderUI 
+pyobjc-framework-FinderSync 
+pyobjc-framework-FSEvents 
+pyobjc-framework-GameCenter 
+pyobjc-framework-GameController 
+pyobjc-framework-GameKit 
+pyobjc-framework-GameplayKit 
+pyobjc-framework-ImageCaptureCore 
+pyobjc-framework-IMServicePlugIn 
+pyobjc-framework-InputMethodKit 
+pyobjc-framework-InstallerPlugins 
+pyobjc-framework-InstantMessage 
+pyobjc-framework-Intents 
+pyobjc-framework-IntentsUI 
+pyobjc-framework-IOSurface 
+pyobjc-framework-iTunesLibrary 
+pyobjc-framework-KernelManagement 
+pyobjc-framework-LatentSemanticMapping 
+pyobjc-framework-LaunchServices 
+pyobjc-framework-libdispatch 
+pyobjc-framework-LinkPresentation 
+pyobjc-framework-LocalAuthentication 
+pyobjc-framework-LocalAuthenticationEmbeddedUI 
+pyobjc-framework-MailKit 
+pyobjc-framework-MapKit 
+pyobjc-framework-MediaAccessibility 
+pyobjc-framework-MediaLibrary 
+pyobjc-framework-MediaPlayer 
+pyobjc-framework-MediaToolbox 
+pyobjc-framework-Metal 
+pyobjc-framework-MetalKit 
+pyobjc-framework-MetalPerformanceShaders 
+pyobjc-framework-MetalPerformanceShadersGraph 
+pyobjc-framework-MetricKit 
+pyobjc-framework-MLCompute 
+pyobjc-framework-ModelIO 
+pyobjc-framework-MultipeerConnectivity 
+pyobjc-framework-NaturalLanguage 
+pyobjc-framework-NetFS 
+pyobjc-framework-Network 
+pyobjc-framework-NetworkExtension 
+pyobjc-framework-NotificationCenter 
+pyobjc-framework-OpenDirectory 
+pyobjc-framework-OSAKit 
+pyobjc-framework-OSLog 
+pyobjc-framework-PassKit 
+pyobjc-framework-PencilKit 
+pyobjc-framework-Photos 
+pyobjc-framework-PhotosUI 
+pyobjc-framework-PreferencePanes 
+pyobjc-framework-PushKit 
+pyobjc-framework-Quartz 
+pyobjc-framework-QuickLookThumbnailing 
+pyobjc-framework-ReplayKit 
+pyobjc-framework-SafariServices 
+pyobjc-framework-SceneKit 
+pyobjc-framework-ScreenCaptureKit 
+pyobjc-framework-ScreenSaver 
+pyobjc-framework-ScreenTime 
+pyobjc-framework-ScriptingBridge 
+pyobjc-framework-SearchKit 
+pyobjc-framework-Security 
+pyobjc-framework-SecurityFoundation 
+pyobjc-framework-SecurityInterface 
+pyobjc-framework-ServiceManagement 
+pyobjc-framework-ShazamKit 
+pyobjc-framework-Social 
+pyobjc-framework-SoundAnalysis 
+pyobjc-framework-Speech 
+pyobjc-framework-SpriteKit 
+pyobjc-framework-StoreKit 
+pyobjc-framework-SyncServices 
+pyobjc-framework-SystemConfiguration 
+pyobjc-framework-SystemExtensions 
+pyobjc-framework-UniformTypeIdentifiers 
+pyobjc-framework-UserNotifications 
+pyobjc-framework-UserNotificationsUI 
+pyobjc-framework-VideoSubscriberAccount 
+pyobjc-framework-VideoToolbox 
+pyobjc-framework-Virtualization 
+pyobjc-framework-Vision 
+pyobjc-framework-WebKit 
 pyodbc===4.0.0-unsupported
 Pyomo 
 pyOpenSSL==19.1.0
