--- a/requirements.txt
+++ b/requirements.txt
@@ -224,7 +224,7 @@ requests-html==0.10.0
 requests-oauthlib==1.3.0
 retrying==1.3.3
 rope==0.16.0
-Rtree==0.9.3
+Rtree
 ruamel_yaml==0.15.87
 rubicon-objc==0.4.2
 scikit-image==0.16.2
