--- a/requirements.txt
+++ b/requirements.txt
@@ -260,7 +260,7 @@ spyder-kernels==1.8.1
 SQLAlchemy==1.3.13
 sqlparse==0.3.0
 srsly==2.4.1
-statsmodels==0.11.0
+statsmodels
 surprise==0.1
 sympy==1.5.1
 tables==3.6.1
