--- a/requirements.txt
+++ b/requirements.txt
@@ -135,7 +135,7 @@ nose==1.3.7
 notebook==6.0.3
 numba==0.48.0
 numexpr==2.7.1
-numpy==1.17.5
+numpy
 numpydoc==0.9.2
 oauthlib==3.1.0
 olefile==0.46
